--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
+    "react-toastify": "^10.0.5",
     "tailwind-scrollbar": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
